--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body {
 input[type="text"] {
   background-color: transparent;
   border: 0;
-  border-bottom: solid 1px #f16051;
+  border-bottom: solid 1px #14A5B5;
   width: 30%;
   padding-bottom: 4px;
   color: #fff !important;
@@ -87,7 +87,7 @@ button {
   letter-spacing: 1px;
   font-size: 15px;
   cursor: pointer;
-  background-color: #f16051;
+  background-color: #14A5B5;
   color: #fff;
   font-weight: 100;
 }
