--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ button:active {
 }
 
 .weather__key {
-  color: #f16051;
+  color: #14A5B5;
   border-bottom: solid 2px rgba(255,255,255,0.06);
   padding: 20px 0 20px 0;
   font-weight: 400;
